tests ex6 4 layers

--- a/test_dropout.ipynb
+++ b/test_dropout.ipynb
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1853,6 +1853,192 @@
     "print(\"Validation loss: \", score[0])\n",
     "print(\"Validation accuracy: \", score[1])\n",
     "model1_reg2 = model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4 hidden layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### BASELINE ###\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_46 (Dense)             (None, 59)                15163     \n",
+      "_________________________________________________________________\n",
+      "dense_47 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "dense_48 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "dense_49 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "dense_50 (Dense)             (None, 5)                 300       \n",
+      "=================================================================\n",
+      "Total params: 26,083\n",
+      "Trainable params: 26,083\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Validation loss:  0.42626810636198403\n",
+      "Validation accuracy:  0.8716220769914979\n",
+      "\n",
+      "\n",
+      "\n",
+      "### DROPOUT ON ALL HIDDEN LAYERS ###\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_51 (Dense)             (None, 59)                15163     \n",
+      "_________________________________________________________________\n",
+      "dropout_20 (Dropout)         (None, 59)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_52 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "dropout_21 (Dropout)         (None, 59)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_53 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "dropout_22 (Dropout)         (None, 59)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_54 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "dropout_23 (Dropout)         (None, 59)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_55 (Dense)             (None, 5)                 300       \n",
+      "=================================================================\n",
+      "Total params: 26,083\n",
+      "Trainable params: 26,083\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "dropout rate =  0.1\n",
+      "Validation loss:  0.3679220122732365\n",
+      "Validation accuracy:  0.8845609541980153\n",
+      "\n",
+      "\n",
+      "dropout rate =  0.2\n",
+      "Validation loss:  0.42609877763985704\n",
+      "Validation accuracy:  0.8662308780633983\n",
+      "\n",
+      "\n",
+      "dropout rate =  0.5\n",
+      "Validation loss:  1.1566923004459906\n",
+      "Validation accuracy:  0.5827885976143945\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "### BATCH NORMALIZATION ###\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_66 (Dense)             (None, 59)                15163     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_6 (Batch (None, 59)                236       \n",
+      "_________________________________________________________________\n",
+      "dense_67 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_7 (Batch (None, 59)                236       \n",
+      "_________________________________________________________________\n",
+      "dense_68 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_8 (Batch (None, 59)                236       \n",
+      "_________________________________________________________________\n",
+      "dense_69 (Dense)             (None, 59)                3540      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_9 (Batch (None, 59)                236       \n",
+      "_________________________________________________________________\n",
+      "dense_70 (Dense)             (None, 5)                 300       \n",
+      "=================================================================\n",
+      "Total params: 27,027\n",
+      "Trainable params: 26,555\n",
+      "Non-trainable params: 472\n",
+      "_________________________________________________________________\n",
+      "Validation loss:  0.3881780474934185\n",
+      "Validation accuracy:  0.8775523956698126\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "N_h = ideal_N_h(256, 4, 100, 5)\n",
+    "nepochs = 200\n",
+    "\n",
+    "#Baseline\n",
+    "print(\"### BASELINE ###\")\n",
+    "model = Sequential()\n",
+    "model.add(Dense(N_h, activation='relu', input_shape=(256,)))\n",
+    "model.add(Dense(N_h, activation='relu'))\n",
+    "model.add(Dense(N_h, activation='relu'))\n",
+    "model.add(Dense(N_h, activation='relu'))\n",
+    "model.add(Dense(5, activation='softmax'))\n",
+    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics=['accuracy'])\n",
+    "model.summary()\n",
+    "history_model4_simple = fit_model(model, x_train, y_train, epochs=nepochs, verbose=1, validation_data=(x_test, y_test))\n",
+    "score = scoreEarlyStopping(history_model4_simple)\n",
+    "print(\"Validation loss: \", score[0])\n",
+    "print(\"Validation accuracy: \", score[1])\n",
+    "print(\"\\n\\n\")\n",
+    "\n",
+    "#Dropout on all hidden layers\n",
+    "print(\"### DROPOUT ON ALL HIDDEN LAYERS ###\")\n",
+    "histories_model4_dropout = []\n",
+    "models4_dropout = []\n",
+    "for d in (0.1, 0.2, 0.5):\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(N_h, activation='relu', input_shape=(256,)))\n",
+    "    model.add(Dropout(d))\n",
+    "    model.add(Dense(N_h, activation='relu'))\n",
+    "    model.add(Dropout(d))\n",
+    "    model.add(Dense(N_h, activation='relu'))\n",
+    "    model.add(Dropout(d))\n",
+    "    model.add(Dense(N_h, activation='relu'))\n",
+    "    model.add(Dropout(d))\n",
+    "    model.add(Dense(5, activation='softmax'))\n",
+    "    model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics=['accuracy'])\n",
+    "    if d==0.1:\n",
+    "        model.summary()\n",
+    "    print(\"dropout rate = \", d)\n",
+    "    history = fit_model(model, x_train, y_train, epochs=nepochs, verbose=1, validation_data=(x_test, y_test))\n",
+    "    score = scoreEarlyStopping(history)\n",
+    "    histories_model4_dropout.append(history)\n",
+    "    print(\"Validation loss: \", score[0])\n",
+    "    print(\"Validation accuracy: \", score[1])\n",
+    "    models4_dropout.append(model)\n",
+    "    print(\"\\n\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "#Only batch normalization on all hidden layers\n",
+    "print(\"### BATCH NORMALIZATION ###\")\n",
+    "model = Sequential()\n",
+    "model.add(Dense(N_h, activation='relu', input_shape=(256,)))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dense(N_h, activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dense(N_h, activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dense(N_h, activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dense(5, activation='softmax'))\n",
+    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics=['accuracy'])\n",
+    "model.summary()\n",
+    "history_model4_bn = fit_model(model, x_train, y_train, epochs=nepochs, verbose=1, validation_data=(x_test, y_test))\n",
+    "score = scoreEarlyStopping(history_model4_bn)\n",
+    "print(\"Validation loss: \", score[0])\n",
+    "print(\"Validation accuracy: \", score[1])\n",
+    "model4_bn = model\n",
+    "print(\"\\n\\n\")"
    ]
   },
   {
