Comments added on the last exercises

--- a/miniproject1.ipynb
+++ b/miniproject1.ipynb
@@ -1544,6 +1544,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first tried to find the best parameters for each type of trick separately (dropout, batch normalization and l1 or l2 regularization) ; we didn't include all these tests in this notebook. Then we compared all the promising models at the same time, doing several runs for each to also capture model variance. The testing methods and results are as follows :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -1858,6 +1865,17 @@
    ],
    "source": [
     "print_results(histories, losses, accuracies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can make multiple observations on these results. We plotted both a summary boxplot in terms of loss and accuracy, and the training curves of validation loss and accuracy. The training curves seem very noisy as compared to the previous tests, especially as they are averaged over 5 runs ; however this is only due to the scale of the axis. They are anyway difficult to exploit, so we will found our discussion more on the boxplots.\n",
+    "\n",
+    "First of all, all models outperform the baseline. We can also clearly observe the effect of adding regularization to the model when comparing batch normalization (denoted as BN) with and without dropout on the accuracy boxplot : the mean accuracy is around the same, but the variance is drastically reduced by the dropout.\n",
+    "\n",
+    "It is hard to tell exactly which model should be deemed as the best. Regarding accuracy, L1 and L2 regularization offer the best results but are amongst the worst in terms of loss. Moreover, we obtain a better accuracy in average with L1 regularization but also more variance. We kept L1 regularization as the best model in the following ; but actually we will see that it will be largely outperformed, so the choice of the best model here does not really matter."
    ]
   },
   {
@@ -2226,6 +2244,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the models outperform again the baseline. This time we chose to keep the dropout model (with a dropout rate of 0.1). The L1-regularized model seemed also a good choice with a low variance, but if consider the two outliers it displays on the accuracy boxplot (which are significant among 5 runs), its variance is actually comparable to the dropout model, which displays a better validation loss and a slightly better accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -2240,6 +2265,7 @@
     }
    ],
    "source": [
+    "#Saving results for comparison with CNN\n",
     "print(losses4)\n",
     "print(accuracies4)\n",
     "histories_keep4 = dict(histories4)"
@@ -2286,6 +2312,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The curves show that our regularized model only slightly outperforms the baseline (as compared with the following curves for a 4-hidden-layers model). This is probably due to the fact that with only one hidden layer, the model lacks flexibility, an the main concern is not overfitting. Regularization can maybe improve a bit the model's variance, but we still are underfitting the data at that point."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
@@ -2319,6 +2352,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With 4 layers, we can more clearly see the benefits of regularizaion, as the regularized model outperforms the baseline by a comfortable margin."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -2349,6 +2389,13 @@
     "ax2.plot(four.history['acc'], label = \"4 layers, training\", c='b')\n",
     "ax2.plot(four.history['val_acc'], label = \"4 layers, validation\", c='b', linestyle='--')\n",
     "finalize_standardplot(fig, ax1, ax2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By observing these curves, and in particular by seeing that the 4-hidden-layers regularized model outperforms our best 1-layer model, both in average performance and in stability, we can confirm our intuition of exercise 5, where adding more hidden layers had not improved on the performance : with proper regularization, adding more hidden layers allowed us this time to improve significantly on the results."
    ]
   },
   {
@@ -2524,6 +2571,15 @@
     "print(score_cnn2)\n",
     "plot_history(history_cnn2, title=\"CNN 2\")\n",
     "model_cnn2 = model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By comparing these first two networks, we can make two conclusions :\n",
+    "- The effect of dropout is once again clearly visible, the validation curves are much closer to the training curves with regularization. It is also interesting to see how the validation accuracy curve is above the training curve, due to the fact that the network does not use all his neurons during training.\n",
+    "- Comparing the figures of mean accuracy and loss with the results of the previous exercises, we can already see that we improved significantly on our model performance."
    ]
   },
   {
@@ -2728,11 +2784,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "These curves confirm what the figures were already telling : CNN models clearly outperform our previous dense networks, which demonstrates the fact that, by taking into account the structure of the data they are really, better suited for this kind of inputs."
+   ]
   }
  ],
  "metadata": {
