--- a/miniproject2.ipynb
+++ b/miniproject2.ipynb
@@ -488,21 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'decoders' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-0405d2704cbe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mencoders\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mencoders\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'P'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuildEncoder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdecoders\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'P'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mencoders\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'T'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuildEncoder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdecoders\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'T'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'decoders' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def buildEncoder(l):\n",
     "    encoder = dict()\n",
@@ -851,7 +839,7 @@
     "\n",
     "**Question**: Explain why and how both transposition to a single tonality and to all possible tonalities can yield transposition invariance in your model. \n",
     "\n",
-    "**Answer**: Once we have transposed all songs to a single tonality, the model will be insensible to the tonality of the input songs: if an identical melody is fed to the model in two different tonalities, we will get an identical output, which is what one expects from this kind of models.\n",
+    "**Answer**: When transposing the data in all possible tonalities, and learned its output in all possible tonalities, so it will be able to make its predictions regardless of the tonality of its input. However this is quite costly in terms of training, so a better solution is to factor out the tonality before the learning by transposing all the data in one fixed tonality. This greatly reduces learning time for the same result (tonality independance), with the small cost that one has to translate a new input in the reference tonality before feeding it to the model, and translate it back after.\n",
     "\n",
     "**Question**: In terms of number of dimensions, what would have been the impact of keeping the joint represenation of a note duration and pitch (vs separating the two features)? \n",
     "\n",
@@ -1098,6 +1086,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Saving the preprocessed data\n",
     "np.save('T', T)\n",
     "np.save('P', P)\n",
     "with open(\"decoders.txt\", 'w') as f:\n",
@@ -1110,6 +1099,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading the preprocessed data\n",
     "T = np.load('T.npy')\n",
     "P = np.load('P.npy')\n",
     "decoders = {'P': [67, 72, 79, 76, 77, 74, 71, 65, 64, 60, 62, 69, 70, 78, 81, 84, 83, 86, 88, 90, 57, 55, 59, 66, 68, 75, 58, 63, 82, 73, 89, 93, 95, 91, 85, 53, 52, 48, 50, 80, 61, 56, 54, 46, 51, 43, 45, 87, 47, 49], 'T': [240, 480, 120, 720, 160, 960, 1440, 320, 1200, 80, 60, 800, 360, 230, 470, 1920, 2400]}"
@@ -2401,7 +2391,7 @@
     "    \n",
     "print_summaries = False\n",
     "    \n",
-    "for dropout in [0.2]:\n",
+    "for dropout in [0.1, 0.2, 0.3]:\n",
     "    if dropout == 0.2:\n",
     "        print_summaries = True\n",
     "    \n",
@@ -2593,7 +2583,9 @@
    "source": [
     "**Question**: What are the best prediction accuracies you obtained? With which model?\n",
     "    \n",
-    "**Answer**: The main pattern one can observe is that on pitch sequences GRU and LSTM model are significantly better than RNN. The differences on duration sequences are much smaller. As for the difference between GRU and LSTM, and the effect of dropout, differences are too small to conclude anything.\n",
+    "**Answer**: The main pattern one can observe is that on pitch sequences GRU and LSTM model are significantly better than RNN. The differences on duration sequences are much smaller. This may be because the rythm of a song is more regular than its melody in general, so it is easier to predict and less influenced by the past. Thus introducing memory in the network does not bring much more information.\n",
+    "\n",
+    "As for the difference between GRU and LSTM, and the effect of dropout, differences are too small to conclude anything.\n",
     "\n",
     "The best models appear to be LSTM with 0.1 dropout, and GRU with 0.2 dropout if we ignore LSTMs."
    ]
@@ -3453,26 +3445,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(None, 395, 17), (None, 395, 50)]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "GRU_model.input_shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
@@ -3485,7 +3457,7 @@
     "    T, P = np.zeros((1, batch_length+1, model.input_shape[0][2])), np.zeros((1, batch_length+1, model.input_shape[1][2]))\n",
     "    T[0, 0, initialTime] = 1\n",
     "    P[0, 0, initialPitch] = 1\n",
-    "    #Probably a better way do do this\n",
+    "    #There is probably a better way do do this, but as compared to the training time this is not so long to do\n",
     "    for i in range(batch_length):\n",
     "        predT, predP = model.predict([T[:,:-1,:], \n",
     "                                               P[:, :-1,:]])\n",
@@ -3899,22 +3871,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Question**: What is the effect of the sampling temperature on the generated melodies?\n",
-    "    \n",
-    "**Answer**: With a temperature lower than one, one expects the more probable transitions to be chosen even more often (see the plot below to visualize the effect of temperature transform on the (0,1] interval). Indeed, when hearing a generated melody one can note little variability in notes and durations, with often long repetitions of the same note.\n",
-    "\n",
-    "With a temperature higher than one, one expects more unlikely transitions to be sampled more often. Indeed, one hears a more unpredictable music with often weird transitions.\n",
-    "\n",
-    "**Question**: Are the generated melodies from the RNN model different from the one generated by the GRU model? If yes, what are the main differences?\n",
-    "\n",
-    "**Answer**: Although the difference is not huge, the melodies generated by the GRU model seem to have better global coherence, with sometimes melodic patterns lasting over a dozen of notes and rythmic patterns that really sound irish. The RNN generated musics are not very coherent and usually don't have repetitions of patterns.\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -3953,6 +3909,26 @@
     "plt.plot(x, y2, label = 'temp 2')\n",
     "plt.legend()\n",
     "plt.title(\"Effect of the temperature in sampling\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: What is the effect of the sampling temperature on the generated melodies?\n",
+    "    \n",
+    "**Answer**: With a temperature lower than one, one expects the more probable transitions to be chosen even more often (see the plot above to visualize the effect of temperature transform on the (0,1] interval). Indeed, when hearing a generated melody one can note little variability in notes and durations, with often long repetitions of the same note.\n",
+    "\n",
+    "With a temperature higher than one, one expects more unlikely transitions to be sampled more often. Indeed, one hears a more unpredictable music with often weird transitions.\n",
+    "\n",
+    "**Question**: Are the generated melodies from the RNN model different from the one generated by the GRU model? If yes, what are the main differences?\n",
+    "\n",
+    "**Answer**: When comparing with our purely random baseline melody, it clearly appears that both models are able to generate quite coherent melodies. \n",
+    "\n",
+    "There are still differences between RNN- and GRU-generated melodies, although less obvious to notice. When listening carefully we can hear some unnatural patterns sometimes in the RNN melodies, and in general less repeating patterns than in GRU melodies which are more globally coherent, and almost sound irish sometimes (with a bit of imagination). \n",
+    "\n",
+    "However we are still quite far from human-composed melodies. Apart from the limits of using only one instrument with one pitch at the same time, we still need to go one scale further in temporal coherence : our melodies are \"locally\" coherent and structured, but they do not exhibit a global structure (eg chorus and verses, or a main melody with variations). \n",
+    "\n"
    ]
   },
   {
